WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107623
REGRESSION(
r139044
): Pan icon remains on screen on Chromium-WinXP
https://bugs.webkit.org/show_bug.cgi?id=107623
Summary
REGRESSION(r139044): Pan icon remains on screen on Chromium-WinXP
yosin
Reported
2013-01-22 21:11:20 PST
= Step to re-produce = * Run Chromium on WinXP (Note: Chromium-Win7 doesn't have pan icon) * Visit page larger than chromium window which have scroll bar(s) * Middle click to start pan scroll * Move around mouse pointer * Middle click to stop scroll = Result = Pan icon is on window = Expectation = No pan icon is on window after pan scroll
Attachments
Patch 1
(1.93 KB, patch)
2013-01-22 21:40 PST
,
yosin
no flags
Details
Formatted Diff
Diff
Patch 2
(11.92 KB, patch)
2013-01-22 23:50 PST
,
yosin
no flags
Details
Formatted Diff
Diff
Patch 3
(12.88 KB, patch)
2013-01-23 01:13 PST
,
yosin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
yosin
Comment 1
2013-01-22 21:11:59 PST
Import from
http://crbug.com/166866
yosin
Comment 2
2013-01-22 21:40:54 PST
Created
attachment 184136
[details]
Patch 1
yosin
Comment 3
2013-01-22 21:42:38 PST
Comment on
attachment 184136
[details]
Patch 1 Could you review this patch? This is for fixing P1-M25-Release-Blocker. Thanks in advance. P.S. Sorry for another regression on AutoscrollController. m(_ _)m
James Robinson
Comment 4
2013-01-22 22:29:12 PST
Comment on
attachment 184136
[details]
Patch 1 View in context:
https://bugs.webkit.org/attachment.cgi?id=184136&action=review
> Source/WebCore/ChangeLog:14 > + No new tests. There is no way to check pan icon image in window.
Is there any way we could fix this and get some tests?
yosin
Comment 5
2013-01-22 23:50:50 PST
Created
attachment 184160
[details]
Patch 2
yosin
Comment 6
2013-01-22 23:52:28 PST
Comment on
attachment 184160
[details]
Patch 2 Could you review this patch? Thanks in advance. = Changes since the last review = * Add a layout test
Hajime Morrita
Comment 7
2013-01-23 00:24:45 PST
r? please?
WebKit Review Bot
Comment 8
2013-01-23 00:28:20 PST
Attachment 184160
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 LayoutTests/platform/chromium-win/fast/events/panScroll-panIcon-expected.png:0: Have to enable auto props in the subversion config file (/home/alancutter/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/alancutter/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 9
2013-01-23 01:07:39 PST
Comment on
attachment 184160
[details]
Patch 2
Attachment 184160
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/16084033
New failing tests: platform/chromium-win/fast/events/panScroll-panIcon.html
yosin
Comment 10
2013-01-23 01:13:12 PST
Created
attachment 184177
[details]
Patch 3
yosin
Comment 11
2013-01-23 01:14:23 PST
Comment on
attachment 184177
[details]
Patch 3 Could you review this patch? Thanks in advance. = Changes since the last review = * Add panScroll-panIcon.html test * Add skip entry for chromium/TestExpectations
WebKit Review Bot
Comment 12
2013-01-23 01:17:41 PST
Attachment 184177
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 LayoutTests/platform/chromium-win/fast/events/panScroll-panIcon-expected.png:0: Have to enable auto props in the subversion config file (/home/alancutter/.subversion/config "enable-auto-props = yes"). Have to set the svn:mime-type in the subversion config file (/home/alancutter/.subversion/config "*.png = svn:mime-type=image/png"). [image/png] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 13
2013-01-23 01:44:06 PST
Comment on
attachment 184177
[details]
Patch 3 Clearing flags on attachment: 184177 Committed
r140525
: <
http://trac.webkit.org/changeset/140525
>
WebKit Review Bot
Comment 14
2013-01-23 01:44:10 PST
All reviewed patches have been landed. Closing bug.
Erik Arvidsson
Comment 15
2013-01-23 13:42:06 PST
I'm seeing strange results on Win:
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=platform%2Fchromium-win%2Ffast%2Fevents%2FpanScroll-panIcon.html
It does not look correct to me. The scrollbar thumb is now larger than before (about twice the height)
Erik Arvidsson
Comment 16
2013-01-23 13:49:06 PST
Filed
https://bugs.webkit.org/show_bug.cgi?id=107729
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug