REGRESSION(r139044): Pan icon remains on screen on Chromium-WinXP https://bugs.webkit.org/show_bug.cgi?id=107623

Reviewed by Hajime Morita.

Source/WebCore:

The issue is caused by AutoscrollController::stopAutoscrollTimer()
doesn't call View::removePanScrollIcon() because m_autoscrollType
is reset before checking it.

This patch changes to reset m_autoscrollType after all references.

Test: platform/chromium-win/fast/events/panScroll-panIcon.html

* page/AutoscrollController.cpp:
(WebCore::AutoscrollController::stopAutoscrollTimer):

LayoutTests:

This test checks no pan icon after pan scroll.

* platform/chromium-win/fast/events/panScroll-panIcon-expected.png: Added.
* platform/chromium-win/fast/events/panScroll-panIcon-expected.txt: Added.
* platform/chromium-win/fast/events/panScroll-panIcon.html: Added.
* platform/chromium/TestExpectations: Changed to skip entry for panScroll-panIcon.html for Android, Linux and Mac.


Canonical link: https://commits.webkit.org/125869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140525 268f45cc-cd09-0410-ab3c-d52691b4dbfc